# console

./: .mypy.ini  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  Makefile  README.md  pyrightconfig.json  setup.cfg  setup.py  tox.ini
.github/workflows/: code-analysis.yml
examples/: advanced_entrypoint.py  command.py  simple_entrypoint.py
src/mediapills/: __init__.py
src/mediapills/console/: __init__.py  applications.py  arguments.py  commands.py  exceptions.py  inputs.py  invokers.py  outputs.py  parsers.py  version.py
src/mediapills/console/abc/: inputs.py  outputs.py  parsers.py
src/mediapills/console/arguments/: __init__.py  commands.py  options.py  parameters.py
src/mediapills/console/base/: applications.py  arguments.py  inputs.py  outputs.py
tests/unit/: __init__.py  dummy_test.py  test_applications.py  test_arguments.py  test_commands.py  test_inputs.py  test_invokers.py  test_outputs.py  test_parsers.py
tests/unit/arguments/: __init__.py  test_commands.py  test_parameters.py
