[metadata]
name = mediapills.console
url = https://github.com/mediapills/console.git
author = Andriy Yatskovets
author_email = andriy.yatskovets@gmail.com
description = The console command line python micro-framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 'HTTP', 'mediapills'
license= 'MIT'
platforms = 'any'
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Application Frameworks
project_urls =
    Bug Tracker=https://github.com/mediapills/console/issues
    Source Code=https://github.com/mediapills/console
[options]
zip_safe = True
packages = find:
package_dir =
    =src
include_package_data = true
python_requires = >= 3.5
[options.packages.find]
where = src
[files]
packages = mediapills
[tool:pytest]
filterwarnings =
    error
